@@ -515,10 +515,6 @@ extern int    svr_clnodes;  /* number of cluster nodes */
 
 extern int    MultiMomMode; /* moms configured for multiple moms per machine */
 
-/*extern struct tree_t  *ipaddrs;*/
-
-/* extern struct tree_t  *streams; */
-
 extern int update_nodes_file(struct pbsnode *);
 
 extern void bad_node_warning(pbs_net_t, struct pbsnode *);
