@@ -4,10 +4,43 @@
 #include <stdlib.h>
 #include <stdio.h>
 #include "pbs_error.h"
-START_TEST(test_one)
+
+char *exec_hosts = "napali/0+napali/1+napali/2+napali/50+napali/4+l11/0+l11/1+l11/2+l11/3";
+char  buf[4096];
+char *napali = "napali";
+char *l11 =    "l11";
+
+char *get_next_exec_host(char **);
+
+START_TEST(get_next_exec_host_test)
   {
+  char *exec = strdup(exec_hosts);
+  char *ptr = exec;
+  int   num_hosts = 9;
+  int   i = 0;
+  char *hostname;
 
+  while ((hostname = get_next_exec_host(&ptr)) != NULL)
+    {
+    i++;
 
+    if (i > 5)
+      {
+      snprintf(buf, sizeof(buf), "Expected hostname '%s' but instead received '%s'",
+        l11, hostname);
+      fail_unless(!strcmp(l11, hostname), buf);
+      }
+    else
+      {
+      snprintf(buf, sizeof(buf), "Expected hostname '%s' but instead received '%s'",
+        napali, hostname);
+      fail_unless(!strcmp(napali, hostname), buf);
+      }
+    }
+
+  fail_unless(i == num_hosts, "Returned the wrong number of host names");
+
+  free(exec);
   }
 END_TEST
 
@@ -21,8 +54,8 @@ END_TEST
 Suite *node_manager_suite(void)
   {
   Suite *s = suite_create("node_manager_suite methods");
-  TCase *tc_core = tcase_create("test_one");
-  tcase_add_test(tc_core, test_one);
+  TCase *tc_core = tcase_create("get_next_exec_host_test");
+  tcase_add_test(tc_core, get_next_exec_host_test);
   suite_add_tcase(s, tc_core);
 
   tc_core = tcase_create("test_two");
@@ -48,3 +81,5 @@ int main(void)
   srunner_free(sr);
   return number_failed;
   }
+
+
